# WellkillerCalculcationsFeature

./: Model_glush_itog.xlsx  base_calculation.py  calculations.py  input_dto.py  main.py  pyproject.toml  Глушение1.3.xlsm
