[tool.poetry]
name = "wellkillercalculcationsfeature"
version = "0.1.0"
description = ""
authors = ["German Legkovoy <147488090+legkovoyg@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
